# protobuf_file_transfer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.12d3cd7  README.md  安全文件传输.docx
client/: CMakeLists.txt
client/include/: config.h  sec_asio_common.h  sec_client_task.h  sec_file_client.h  secftclient.h  secftclient_internal.h
client/secclient/: CMakeLists.txt  sec_asio_common.cpp  sec_async_client.cpp  sec_client_task.cpp  sec_file_client.cpp  secftclient.cpp
client/test/: CMakeLists.txt  test.cpp
include/: sec_variant.hpp
proto/: CMakeLists.txt  file_transfer.proto
sdk/: README.md
sdk/client/include/: config.h  sec_async_client.h  sec_client_task.h  secftclient_internal.h
sdk/client/secclient/: sec_client_task.cpp
sdk/server/secserver/: CMakeLists.txt  secft.cpp
server/: CMakeLists.txt
server/include/: secft.h  secft_asio_common.h
server/secserver/: CMakeLists.txt  secft.cpp  secft_asio_common.cpp
server/test/: test.cpp
zuolin/: .gitignore  LICENSE  README.md  config.ini  manage.py  readme  req.txt  setenv.sh  test.sh  zuolin.db
zuolin/app/: __init__.py  index.py
zuolin/https/: 2_cvzhang.cn.key
zuolin/templates/: index.html
zuolin/ui/: ref.txt
zuolin_client/: .directory  FilePicker.qml  FilesWindow.qml  HistoryWindow.qml  LoginStack.qml  LoginTextBox.qml  MainWindow.qml  README.md  TransferringWindow.qml  client_backend.cpp  client_backend.h  config.h  login_backend.h  loginbackend.cpp  main.cpp  main.qml  qml.qrc  requestmaneger.cpp  requestmaneger.h  zuolin_client.pro
zuolin_client/icons/: icons.qrc
(+11 files in other folders)
